# gdpr-studio-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_auth_tenancy.py  0003_force_rls_bypass.py  0004_billing.py  0005_usage_cost.py  0006_category_embeddings.py  0007_compliance.py  0008_processes_sector.py  0009_measures.py  0010_clients_inventory.py  0011_client_documents.py
app/: __init__.py  aydinlatma_enrich.py  config.py  db.py  docx_export.py  docx_style.py  embed_categories.py  export_openapi.py  grounding_options.py  idempotency.py  inventory_import.py  inventory_template.py  main.py  models.py  observability.py  redis_client.py  repositories.py  sectors.py  seed.py  seed_compliance.py  semantic.py  semantic_config.py  survey_schema.py  workbook_import.py  workbook_template.py
app/auth/: identity.py  jwt.py  startup_guard.py  tenant_session.py
data/: anket_kitabi_sablon.xlsx  anket_sorular.json  aydinlatma_boilerplate.json  categories.json  measures.json  processes.json
eval/: __init__.py  cases.py  checks.py  runner.py
legal_core/: __init__.py  adapters.py  aggregate_sections.py  boilerplate.py  canonical.py  generate.py  grounding.py  models.py  normalize.py  prompt.py  provider.py  rules.py  scoring.py
tests/: conftest.py  test_accounts_api.py  test_aggregate_sections.py  test_api_integration.py  test_auth_jwt.py  test_aydinlatma_api.py  test_aydinlatma_enrich.py  test_aydinlatma_prompt.py  test_billing_api.py  test_billing_entitlement.py  test_billing_models.py  test_billing_repositories.py  test_billing_usage_atomic.py  test_billing_webhook.py  test_boilerplate.py  test_canonical.py  test_canonical_data.py  test_categories_data.py  test_cerez_api.py  test_client_api.py  test_client_document_repo.py  test_client_documents_api.py  test_client_documents_rls.py  test_client_model.py  test_client_repo.py  test_compliance_api.py  test_compliance_logic.py  test_compliance_models.py  test_compliance_repo.py  test_compliance_rls.py  test_compliance_snapshot.py  test_config_auth.py  test_document_store.py  test_docx_export.py  test_docx_style.py  test_email_sender.py  test_embed_categories.py  test_enrich_categories.py  test_eval_grounding.py  test_extract_measures.py  (+53 more)
(+36 files in other folders)
