[project]
name = "gdpr-studio-backend"
version = "0.1.0"
description = "KVKK Yönetim — backend (legal_core + FastAPI modüler monolit)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
# Model sağlayıcı (BYOK/managed). legal_core saf kalır; anthropic yalnızca AnthropicProvider'da lazy import edilir.
anthropic = ["anthropic>=0.40"]
# API katmanı (sonraki adım: FastAPI + Postgres + Redis)
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "anthropic>=0.40",
    "sentry-sdk[fastapi]>=2.0",
    "pyjwt[crypto]>=2.8",
    "itsdangerous>=2.1",
    "httpx>=0.27",
    "email-validator>=2",
    "stripe>=10",
    "fastembed>=0.3",
]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["legal_core", "app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: satır uzunluğu formatter'a; B008: FastAPI Depends() deseni; UP042: str+Enum geçerli
ignore = ["E501", "B008", "UP042"]
